# raven-game-editor

./: Cargo.toml  LICENSE  README.md  build.rs
src/: asset_defs.rs  image_table.rs  main.rs
src/app/: asset_tree.rs  colorset.rs  context.rs  dialogs.rs  editor_action.rs  editors.rs  image_collection.rs  log_window.rs  mod.rs  path_library.rs  recent_projects.rs  settings.rs  sys_dialogs.rs  texture_manager.rs  window_context.rs
src/app/checker/: asset_problem.rs  map_data.rs  mod.rs  pal_sprite.rs  room.rs  sprite.rs
src/app/dialogs/: about.rs  colorset.rs  confirmation.rs  message_box.rs  mod.rs  text_input.rs
src/app/editors/: actions.rs  mod.rs  store.rs
src/app/widgets/: asset_tree.rs  menu.rs  mod.rs
src/app/windows/: check.rs  log_window.rs  mod.rs  properties.rs  settings.rs  status.rs
src/checker/: asset_problem.rs  map_data.rs  mod.rs  mod_data.rs  room.rs  sprite.rs  tileset.rs  world.rs
src/data_asset/: font.rs  header_def.rs  map_data.rs  mod.rs  mod_data.rs  pal_sprite.rs  prop_font.rs  room.rs  sfx.rs  sprite.rs  sprite_animation.rs  tileset.rs  world.rs
src/data_asset/reader/: font.rs  image_converter.rs  map_data.rs  mod.rs  mod_data.rs  pal_sprite.rs  pre_processor.rs  prop_font.rs  room.rs  sfx.rs  sprite.rs  sprite_animation.rs  tileset.rs  tokenizer.rs  value.rs  world.rs
src/data_asset/writer/: ident_store.rs  mod.rs
src/editors/: font.rs  map_data.rs  mod.rs  mod_data.rs  prop_font.rs  room.rs  sfx.rs  sprite.rs  sprite_animation.rs  tileset.rs
src/editors/font/: import.rs  mod.rs  properties.rs
src/editors/map_data/: mod.rs  properties.rs
src/editors/mod_data/: export_sample.rs  mod.rs  properties.rs  transpose.rs
src/editors/pal_sprite/: add_frames.rs  (+6 more)
src/image/: colors.rs  colorset.rs  image_collection.rs  image_collection_io.rs  image_pixels.rs  mod.rs  static_image_store.rs  texture_manager.rs
src/misc/: asset_defs.rs  colors.rs  image_collection.rs  image_table.rs  mod.rs  mod_utils.rs  no_sound.rs  reader.rs  sound.rs  texture_manager.rs  wav_utils.rs  window_context.rs  writer.rs
src/sound/: mod.rs  player.rs
(+132 files in other folders)
